src/text/snapshots/similar__text__inline__line_ops_inline_semantic_snapshot.snap
---
source: src/text/inline.rs
assertion_line: 1039
expression: "&changes"
---
[
    InlineChange {
        tag: Delete,
        old_index: Some(
            0,
        ),
        new_index: None,
        values: [
            (
                false,
                "The ",
            ),
            (
                false,
                "came.\n",
            ),
        ],
    },
    InlineChange {
        tag: Insert,
        old_index: None,
        new_index: Some(
            0,
        ),
        values: [
            (
                false,
                "The ",
            ),
            (
                true,
                "cat ",
            ),
            (
                false,
                "came.\n",
            ),
        ],
    },
]
